Fixed my Img in the Header
Fixed my img in the header section.
Fixed the off-screen testimonial cards. It should now wrap to the user's respective mobile screen.
Also fixed the offset for mobile users.

--- a/css/about.css
+++ b/css/about.css
@@ -41,3 +41,8 @@
     top: -10.6em;
   }
 }
+
+.meImg
+{
+    width: 50%;
+}
